2003-02-05  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* cavity.h: More logical argument order in constructor.
	* cavity.cpp: Ditto.

2003-02-05  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* stack.cpp: Fix naming clash.

2003-02-05  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* expression.cpp: Fix zero inc slab bug.
	* S_scheme_fields.cpp: Ditto.

2003-02-04  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* field.h: Remove superfluous constructor.
	* field.cpp: Ditto.
	* S_scheme_fields.cpp: Ditto.
	* bloch.cpp: Ditto.
	* stack.cpp: Ditto.
	* waveguide.cpp: Ditto.

2003-02-04  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* cavity.h: add eps_at, mu_at, n_at.
	* cavity.cpp: Ditto.
	* camfr_wrap.cpp: Ditto.

2003-02-04  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* field.h: constify arguments.
	* field.cpp: Ditto.

2003-01-31  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* expression.cpp: Eliminate unneeded transparent scatterer.

2003-01-31  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* field.cpp: Improve memory management.
	* field.h: Ditto.

2003-01-31  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* stack.cpp: Speed up field expansions.

2003-01-28  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* camfr_wrap.cpp: Fix BlochStack.length().

2003-01-08  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* camfr_wrap.cpp: Add SectionMode.n().

2003-01-08  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* expression.h: Copy expressions to avoid side-effects.
	* expressions.cpp: Ditto.
	* stack.cpp: Ditto.

2002-12-05  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* defs.h: Add backward modes option.
	* camfr_wrap.cpp: Ditto.

2002-12-02  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* camfr_wrap.cpp: Add SectionMode.

2002-11-28  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* expression.h: Add remove_term_front.
	* expression.cpp: Ditto.

2002-11-28  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
