@@ -1,5 +1,11 @@
 2003-02-05  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
+	* bloch.h: Added BlochMode::fw_bw.
+	* bloch.cpp: Ditto.
+	* camfr_wrap.cpp: Ditto.
+
+2003-02-05  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
 	* cavity.h: More logical argument order in constructor.
 	* cavity.cpp: Ditto.
 
